hphp/test/zend/good/ext/curl/tests/bug65646.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded('curl')) exit("skip curl extension not loaded");
if (ini_get('open_basedir')) exit("skip open_basedir is set");
}
